--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         margin: 0;
         padding: 20px;
         overflow-x: hidden;
+        overflow-y: auto;
       }
 
       .container {
-        max-width: 800px;
         background-color: rgba(247, 255, 247, 0.9);
         border-radius: 20px;
         padding: 20px;
@@ -38,6 +38,9 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        max-width: 90vw;
+        width: 100%;
+        box-sizing: border-box;
       }
       h1 {
         color: var(--primary);
@@ -47,8 +50,10 @@
       }
 
       #pet-container {
-        width: 400px;
-        height: 400px;
+        width: 25vw;
+        max-width: 128px;
+        height: 25vw;
+        max-height: 128px;
         margin: 20px auto;
         position: relative;
         background-color: var(--light);
@@ -293,6 +298,21 @@
         button {
           padding: 10px 15px;
           font-size: 0.8rem;
+        }
+
+        .container {
+          padding: 10px;
+          max-width: 95vw;
+        }
+
+        #pet-container {
+          width: 64px;
+          height: 64px;
+        }
+
+        button {
+          padding: 10px 15px;
+          font-size: 0.75rem;
         }
       }
     </style>
